# comictagger

./: .flake8  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  AUTHORS  CONTRIBUTING.md  MANIFEST  MANIFEST.in  Makefile  PKG-INFO  README.md  README.txt  appveyor.yml  autotagmatchwindow.py  autotagmatchwindow.ui  autotagprogresswindow.py  autotagprogresswindow.ui  autotagstartwindow.py  autotagstartwindow.ui  cbltransformer.py  comet.py  comicarchive.py  comicbookinfo.py  comicinfoxml.py  comictagger.py  comictagger.spec  comicvinecacher.py  comicvinetalker.py  coverimagewidget.py  coverimagewidget.ui  crediteditorwindow.py  crediteditorwindow.ui  ctversion.py  current_version.txt  exportwindow.py  exportwindow.ui  filenameparser.py  filerenamer.py  fileselectionlist.py  (+47 more)
.github/workflows/: build.yaml  contributions.yaml  package.yaml
UnRAR2/: unix.py
build-tools/: ComicTagger.desktop  comictagger.spec  dmgbuild.conf  generate_settngs.py  get_appimage.py  oidc-exchange.py  zip_artifacts.py
build-tools/mac/: Makefile  make_thin.sh
comicapi/: __init__.py  _url.py  comet.py  comicarchive.py  comicbookinfo.py  comicinfoxml.py  filenamelexer.py  filenameparser.py  genericmetadata.py  issuestring.py  merge.py  utils.py
comicapi/__pyinstaller/: __init__.py  hook-comicapi.py
comicapi/archivers/: __init__.py  archiver.py  folder.py  rar.py  sevenzip.py  unknown.py  zip.py
comicapi/data/: __init__.py  publishers.json
comicapi/metadata/: __init__.py  comet.py  comicbookinfo.py  comicrack.py  metadata.py
comicapi/tags/: __init__.py  comet.py  comicbookinfo.py  comicrack.py  tag.py
comictagger/: cli.py  comictagger.py  filenameparser.py  imagehasher.py  main.py  pagebrowser.py  settings.py
comictagger/UnRAR2/: test_UnRAR2.py
comictagger/ui/: issueselectionwindow.ui  settingswindow.ui  taggerwindow.ui
comictaggerlib/: __main__.py  applicationlogwindow.py  autotagmatchwindow.py  autotagprogresswindow.py  autotagstartwindow.py  cbltransformer.py  cli.py  comet.py  comicarchive.py  comicbookinfo.py  comiccacher.py  comicinfoxml.py  comicvinecacher.py  comicvinetalker.py  coverimagewidget.py  crediteditorwindow.py  ctversion.py  defaults.py  exportwindow.py  filenameparser.py  filerenamer.py  fileselectionlist.py  genericmetadata.py  gui.py  imagefetcher.py  imagehasher.py  imagepopup.py  issueidentifier.py  issueselectionwindow.py  issuestring.py  log.py  logwindow.py  main.py  matchselectionwindow.py  md.py  optionalmsgdialog.py  options.py  pagebrowser.py  pagelisteditor.py  pageloader.py  (+11 more)
comictaggerlib/UnRAR2/: __init__.py
comictaggerlib/__pyinstaller/: __init__.py  hook-comictaggerlib.py  hook-wordninja.py
comictaggerlib/ctoptions/: __init__.py  cmdline.py  file.py  plugin.py  talker_plugins.py
comictaggerlib/ctsettings/: __init__.py  commandline.py  file.py  plugin.py  plugin_finder.py  settngs_namespace.py  types.py
comictaggerlib/graphics/: __init__.py  graphics.qrc  resources.py
comictaggerlib/i18n/: en_GB.qm  en_GB.ts  lang_utils.py
comictaggerlib/settings/: __init__.py  cmdline.py  file.py  manager.py  types.py
comictaggerlib/ui/: TemplateHelp.ui  __init__.py  applicationlogwindow.ui  autotagmatchwindow.ui  autotagprogresswindow.ui  autotagstartwindow.ui  coverimagewidget.ui  crediteditorwindow.ui  customwidgets.py  exportwindow.ui  fileselectionlist.ui  idprogresswindow.ui  imagepopup.ui  issueselectionwindow.ui  logwindow.ui  matchselectionwindow.ui  pagebrowser.ui  pagelisteditor.ui  progresswindow.ui  qtutils.py  renamewindow.ui  seriesselectionwindow.ui  settingswindow.ui  taggerwindow.ui  talkeruigenerator.py  volumeselectionwindow.ui
comictalker/: __init__.py  comiccacher.py  comictalker.py  comictalkerapi.py  resulttypes.py  talker_utils.py  talkerbase.py  utils.py
comictalker/talkers/: comicvine.py  mangaupdates.py
debian_scripts/: after_install.sh  before_remove.sh
desktop-integration/linux/: ComicTagger.desktop
desktop-integration/mac/: ComicTagger  Info.plist  main.sh
desktop-integration/windows/: ComicTagger-pip.lnk
google/: googlecode_upload.py
google/gadgets/: social.xml  twitter.xml
mac/: Makefile  app.icns  make_thin.sh  volume.icns
scripts/: README.txt  find_dupes.py  inventory.py  make_links.py  move2folder.py  name_fixer.py  remove_ads.py  shrink.py  test.py  validate_cover.py  xforms
src/: comicarchive.py  ctversion.py  exportwindow.py  settings.py
testing/: comicdata.py  comicvine.py  filenames.py  settings.py
testing/data/: fake_cbr.cbr
tests/: autoimprint_test.py  comicarchive_test.py  comiccacher_test.py  comicvinetalker_test.py  conftest.py  ctsettings_test.py  filenameparser_test.py  filenames.py  genericmetadata_test.py  integration_test.py  issueidentifier_test.py  issuestring_test.py  metadata_test.py  rename_test.py  settings_test.py  tags_test.py  talker_test.py  test_FilenameParser.py  test_comicarchive.py  test_rename.py  utils_test.py
ui/: matchselectionwindow.ui
unrar/: makefile
windows/: Makefile  build.bat  deps.ps1  env.ps1  fullbuild.ps1  provision.ps1
windows/nsis/: comictagger.nsi  languages.nsh  license.txt  release.nsh
